parser.out
Grammar

Rule 0     S' -> program
Rule 1     program -> modulo librerias funcionmain
Rule 2     modulo -> MODULO ID ENDSENTENCE
Rule 3     funcionmain -> DEFINE PMAIN LPARENT RPARENT LCORCHE instrucciones RCORCHE
Rule 4     librerias -> IMPORTA ID ENDSENTENCE librerias
Rule 5     librerias -> empty
Rule 6     instrucciones -> declaraciones
Rule 7     instrucciones -> ciclos
Rule 8     instrucciones -> condicionales
Rule 9     instrucciones -> expresiones ENDSENTENCE
Rule 10    instrucciones -> instrucciones
Rule 11    instrucciones -> empty
Rule 12    declaraciones -> VAR ID ENDSENTENCE
Rule 13    declaraciones -> VAR ID ASIGNA expresiones ENDSENTENCE
Rule 14    condicionales -> SI LPARENT expresiones RPARENT LCORCHE instrucciones RCORCHE sinocondicion
Rule 15    sinocondicion -> SINO LCORCHE instrucciones RCORCHE
Rule 16    sinocondicion -> empty
Rule 17    ciclos -> PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE
Rule 18    condicionfor -> expresiones
Rule 19    expresiones -> expresiones SUMA terminos
Rule 20    expresiones -> expresiones IGUALDAD terminos
Rule 21    expresiones -> expresiones RESTA terminos
Rule 22    expresiones -> terminos
Rule 23    terminos -> terminos MUTIPLICA factor
Rule 24    terminos -> terminos DIVIDE factor
Rule 25    terminos -> factor
Rule 26    factor -> NUMERO
Rule 27    factor -> ID
Rule 28    factor -> LPARENT expresiones RPARENT
Rule 29    empty -> <empty>

Terminals, with rules where they appear

ASIGNA               : 13
CARACTERES           : 
CHARACTER            : 
COMA                 : 17
DEFINE               : 3
DIFERENCIA           : 
DIVIDE               : 24
EN                   : 17
ENDSENTENCE          : 2 4 9 12 13
ENTERO               : 
ID                   : 2 4 12 13 17 17 27
IGUALDAD             : 20
IMPORTA              : 4
LBRACKET             : 
LCORCHE              : 3 14 15 17
LPARENT              : 3 14 17 17 28
MAYOIGUA             : 
MAYORQUE             : 
MENOIGUAL            : 
MENORQUE             : 
MODULO               : 2
MUTIPLICA            : 23
NUMERO               : 26
PARA                 : 17
PMAIN                : 3
RBRACKET             : 
RCORCHE              : 3 14 15 17
RESTA                : 21
RETORNA              : 
RPARENT              : 3 14 17 17 28
SI                   : 14
SINO                 : 15
SUMA                 : 19
VAR                  : 12 13
error                : 

Nonterminals, with rules where they appear

ciclos               : 7
condicionales        : 8
condicionfor         : 17
declaraciones        : 6
empty                : 5 11 16
expresiones          : 9 13 14 18 19 20 21 28
factor               : 23 24 25
funcionmain          : 1
instrucciones        : 3 10 14 15 17
librerias            : 1 4
modulo               : 1
program              : 0
sinocondicion        : 14
terminos             : 19 20 21 22 23 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . modulo librerias funcionmain
    (2) modulo -> . MODULO ID ENDSENTENCE

    MODULO          shift and go to state 3

    program                        shift and go to state 1
    modulo                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> modulo . librerias funcionmain
    (4) librerias -> . IMPORTA ID ENDSENTENCE librerias
    (5) librerias -> . empty
    (29) empty -> .

    IMPORTA         shift and go to state 5
    DEFINE          reduce using rule 29 (empty -> .)

    librerias                      shift and go to state 4
    empty                          shift and go to state 6

state 3

    (2) modulo -> MODULO . ID ENDSENTENCE

    ID              shift and go to state 7


state 4

    (1) program -> modulo librerias . funcionmain
    (3) funcionmain -> . DEFINE PMAIN LPARENT RPARENT LCORCHE instrucciones RCORCHE

    DEFINE          shift and go to state 9

    funcionmain                    shift and go to state 8

state 5

    (4) librerias -> IMPORTA . ID ENDSENTENCE librerias

    ID              shift and go to state 10


state 6

    (5) librerias -> empty .

    DEFINE          reduce using rule 5 (librerias -> empty .)


state 7

    (2) modulo -> MODULO ID . ENDSENTENCE

    ENDSENTENCE     shift and go to state 11


state 8

    (1) program -> modulo librerias funcionmain .

    $end            reduce using rule 1 (program -> modulo librerias funcionmain .)


state 9

    (3) funcionmain -> DEFINE . PMAIN LPARENT RPARENT LCORCHE instrucciones RCORCHE

    PMAIN           shift and go to state 12


state 10

    (4) librerias -> IMPORTA ID . ENDSENTENCE librerias

    ENDSENTENCE     shift and go to state 13


state 11

    (2) modulo -> MODULO ID ENDSENTENCE .

    IMPORTA         reduce using rule 2 (modulo -> MODULO ID ENDSENTENCE .)
    DEFINE          reduce using rule 2 (modulo -> MODULO ID ENDSENTENCE .)


state 12

    (3) funcionmain -> DEFINE PMAIN . LPARENT RPARENT LCORCHE instrucciones RCORCHE

    LPARENT         shift and go to state 14


state 13

    (4) librerias -> IMPORTA ID ENDSENTENCE . librerias
    (4) librerias -> . IMPORTA ID ENDSENTENCE librerias
    (5) librerias -> . empty
    (29) empty -> .

    IMPORTA         shift and go to state 5
    DEFINE          reduce using rule 29 (empty -> .)

    librerias                      shift and go to state 15
    empty                          shift and go to state 6

state 14

    (3) funcionmain -> DEFINE PMAIN LPARENT . RPARENT LCORCHE instrucciones RCORCHE

    RPARENT         shift and go to state 16


state 15

    (4) librerias -> IMPORTA ID ENDSENTENCE librerias .

    DEFINE          reduce using rule 4 (librerias -> IMPORTA ID ENDSENTENCE librerias .)


state 16

    (3) funcionmain -> DEFINE PMAIN LPARENT RPARENT . LCORCHE instrucciones RCORCHE

    LCORCHE         shift and go to state 17


state 17

    (3) funcionmain -> DEFINE PMAIN LPARENT RPARENT LCORCHE . instrucciones RCORCHE
    (6) instrucciones -> . declaraciones
    (7) instrucciones -> . ciclos
    (8) instrucciones -> . condicionales
    (9) instrucciones -> . expresiones ENDSENTENCE
    (10) instrucciones -> . instrucciones
    (11) instrucciones -> . empty
    (12) declaraciones -> . VAR ID ENDSENTENCE
    (13) declaraciones -> . VAR ID ASIGNA expresiones ENDSENTENCE
    (17) ciclos -> . PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE
    (14) condicionales -> . SI LPARENT expresiones RPARENT LCORCHE instrucciones RCORCHE sinocondicion
    (19) expresiones -> . expresiones SUMA terminos
    (20) expresiones -> . expresiones IGUALDAD terminos
    (21) expresiones -> . expresiones RESTA terminos
    (22) expresiones -> . terminos
    (29) empty -> .
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    VAR             shift and go to state 25
    PARA            shift and go to state 27
    SI              shift and go to state 28
    RCORCHE         reduce using rule 29 (empty -> .)
    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    instrucciones                  shift and go to state 19
    declaraciones                  shift and go to state 20
    ciclos                         shift and go to state 21
    condicionales                  shift and go to state 22
    expresiones                    shift and go to state 23
    empty                          shift and go to state 24
    terminos                       shift and go to state 29
    factor                         shift and go to state 30

state 18

    (28) factor -> LPARENT . expresiones RPARENT
    (19) expresiones -> . expresiones SUMA terminos
    (20) expresiones -> . expresiones IGUALDAD terminos
    (21) expresiones -> . expresiones RESTA terminos
    (22) expresiones -> . terminos
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    expresiones                    shift and go to state 32
    terminos                       shift and go to state 29
    factor                         shift and go to state 30

state 19

    (3) funcionmain -> DEFINE PMAIN LPARENT RPARENT LCORCHE instrucciones . RCORCHE
    (10) instrucciones -> instrucciones .

  ! shift/reduce conflict for RCORCHE resolved as shift
    RCORCHE         shift and go to state 33

  ! RCORCHE         [ reduce using rule 10 (instrucciones -> instrucciones .) ]


state 20

    (6) instrucciones -> declaraciones .

    RCORCHE         reduce using rule 6 (instrucciones -> declaraciones .)


state 21

    (7) instrucciones -> ciclos .

    RCORCHE         reduce using rule 7 (instrucciones -> ciclos .)


state 22

    (8) instrucciones -> condicionales .

    RCORCHE         reduce using rule 8 (instrucciones -> condicionales .)


state 23

    (9) instrucciones -> expresiones . ENDSENTENCE
    (19) expresiones -> expresiones . SUMA terminos
    (20) expresiones -> expresiones . IGUALDAD terminos
    (21) expresiones -> expresiones . RESTA terminos

    ENDSENTENCE     shift and go to state 34
    SUMA            shift and go to state 35
    IGUALDAD        shift and go to state 36
    RESTA           shift and go to state 37


state 24

    (11) instrucciones -> empty .

    RCORCHE         reduce using rule 11 (instrucciones -> empty .)


state 25

    (12) declaraciones -> VAR . ID ENDSENTENCE
    (13) declaraciones -> VAR . ID ASIGNA expresiones ENDSENTENCE

    ID              shift and go to state 38


state 26

    (27) factor -> ID .

    MUTIPLICA       reduce using rule 27 (factor -> ID .)
    DIVIDE          reduce using rule 27 (factor -> ID .)
    ENDSENTENCE     reduce using rule 27 (factor -> ID .)
    SUMA            reduce using rule 27 (factor -> ID .)
    IGUALDAD        reduce using rule 27 (factor -> ID .)
    RESTA           reduce using rule 27 (factor -> ID .)
    RPARENT         reduce using rule 27 (factor -> ID .)


state 27

    (17) ciclos -> PARA . LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE

    LPARENT         shift and go to state 39


state 28

    (14) condicionales -> SI . LPARENT expresiones RPARENT LCORCHE instrucciones RCORCHE sinocondicion

    LPARENT         shift and go to state 40


state 29

    (22) expresiones -> terminos .
    (23) terminos -> terminos . MUTIPLICA factor
    (24) terminos -> terminos . DIVIDE factor

    ENDSENTENCE     reduce using rule 22 (expresiones -> terminos .)
    SUMA            reduce using rule 22 (expresiones -> terminos .)
    IGUALDAD        reduce using rule 22 (expresiones -> terminos .)
    RESTA           reduce using rule 22 (expresiones -> terminos .)
    RPARENT         reduce using rule 22 (expresiones -> terminos .)
    MUTIPLICA       shift and go to state 41
    DIVIDE          shift and go to state 42


state 30

    (25) terminos -> factor .

    MUTIPLICA       reduce using rule 25 (terminos -> factor .)
    DIVIDE          reduce using rule 25 (terminos -> factor .)
    ENDSENTENCE     reduce using rule 25 (terminos -> factor .)
    SUMA            reduce using rule 25 (terminos -> factor .)
    IGUALDAD        reduce using rule 25 (terminos -> factor .)
    RESTA           reduce using rule 25 (terminos -> factor .)
    RPARENT         reduce using rule 25 (terminos -> factor .)


state 31

    (26) factor -> NUMERO .

    MUTIPLICA       reduce using rule 26 (factor -> NUMERO .)
    DIVIDE          reduce using rule 26 (factor -> NUMERO .)
    ENDSENTENCE     reduce using rule 26 (factor -> NUMERO .)
    SUMA            reduce using rule 26 (factor -> NUMERO .)
    IGUALDAD        reduce using rule 26 (factor -> NUMERO .)
    RESTA           reduce using rule 26 (factor -> NUMERO .)
    RPARENT         reduce using rule 26 (factor -> NUMERO .)


state 32

    (28) factor -> LPARENT expresiones . RPARENT
    (19) expresiones -> expresiones . SUMA terminos
    (20) expresiones -> expresiones . IGUALDAD terminos
    (21) expresiones -> expresiones . RESTA terminos

    RPARENT         shift and go to state 43
    SUMA            shift and go to state 35
    IGUALDAD        shift and go to state 36
    RESTA           shift and go to state 37


state 33

    (3) funcionmain -> DEFINE PMAIN LPARENT RPARENT LCORCHE instrucciones RCORCHE .

    $end            reduce using rule 3 (funcionmain -> DEFINE PMAIN LPARENT RPARENT LCORCHE instrucciones RCORCHE .)


state 34

    (9) instrucciones -> expresiones ENDSENTENCE .

    RCORCHE         reduce using rule 9 (instrucciones -> expresiones ENDSENTENCE .)


state 35

    (19) expresiones -> expresiones SUMA . terminos
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    terminos                       shift and go to state 44
    factor                         shift and go to state 30

state 36

    (20) expresiones -> expresiones IGUALDAD . terminos
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    terminos                       shift and go to state 45
    factor                         shift and go to state 30

state 37

    (21) expresiones -> expresiones RESTA . terminos
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    terminos                       shift and go to state 46
    factor                         shift and go to state 30

state 38

    (12) declaraciones -> VAR ID . ENDSENTENCE
    (13) declaraciones -> VAR ID . ASIGNA expresiones ENDSENTENCE

    ENDSENTENCE     shift and go to state 47
    ASIGNA          shift and go to state 48


state 39

    (17) ciclos -> PARA LPARENT . ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE

    ID              shift and go to state 49


state 40

    (14) condicionales -> SI LPARENT . expresiones RPARENT LCORCHE instrucciones RCORCHE sinocondicion
    (19) expresiones -> . expresiones SUMA terminos
    (20) expresiones -> . expresiones IGUALDAD terminos
    (21) expresiones -> . expresiones RESTA terminos
    (22) expresiones -> . terminos
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    expresiones                    shift and go to state 50
    terminos                       shift and go to state 29
    factor                         shift and go to state 30

state 41

    (23) terminos -> terminos MUTIPLICA . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    factor                         shift and go to state 51

state 42

    (24) terminos -> terminos DIVIDE . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    factor                         shift and go to state 52

state 43

    (28) factor -> LPARENT expresiones RPARENT .

    MUTIPLICA       reduce using rule 28 (factor -> LPARENT expresiones RPARENT .)
    DIVIDE          reduce using rule 28 (factor -> LPARENT expresiones RPARENT .)
    ENDSENTENCE     reduce using rule 28 (factor -> LPARENT expresiones RPARENT .)
    SUMA            reduce using rule 28 (factor -> LPARENT expresiones RPARENT .)
    IGUALDAD        reduce using rule 28 (factor -> LPARENT expresiones RPARENT .)
    RESTA           reduce using rule 28 (factor -> LPARENT expresiones RPARENT .)
    RPARENT         reduce using rule 28 (factor -> LPARENT expresiones RPARENT .)


state 44

    (19) expresiones -> expresiones SUMA terminos .
    (23) terminos -> terminos . MUTIPLICA factor
    (24) terminos -> terminos . DIVIDE factor

    ENDSENTENCE     reduce using rule 19 (expresiones -> expresiones SUMA terminos .)
    SUMA            reduce using rule 19 (expresiones -> expresiones SUMA terminos .)
    IGUALDAD        reduce using rule 19 (expresiones -> expresiones SUMA terminos .)
    RESTA           reduce using rule 19 (expresiones -> expresiones SUMA terminos .)
    RPARENT         reduce using rule 19 (expresiones -> expresiones SUMA terminos .)
    MUTIPLICA       shift and go to state 41
    DIVIDE          shift and go to state 42


state 45

    (20) expresiones -> expresiones IGUALDAD terminos .
    (23) terminos -> terminos . MUTIPLICA factor
    (24) terminos -> terminos . DIVIDE factor

    ENDSENTENCE     reduce using rule 20 (expresiones -> expresiones IGUALDAD terminos .)
    SUMA            reduce using rule 20 (expresiones -> expresiones IGUALDAD terminos .)
    IGUALDAD        reduce using rule 20 (expresiones -> expresiones IGUALDAD terminos .)
    RESTA           reduce using rule 20 (expresiones -> expresiones IGUALDAD terminos .)
    RPARENT         reduce using rule 20 (expresiones -> expresiones IGUALDAD terminos .)
    MUTIPLICA       shift and go to state 41
    DIVIDE          shift and go to state 42


state 46

    (21) expresiones -> expresiones RESTA terminos .
    (23) terminos -> terminos . MUTIPLICA factor
    (24) terminos -> terminos . DIVIDE factor

    ENDSENTENCE     reduce using rule 21 (expresiones -> expresiones RESTA terminos .)
    SUMA            reduce using rule 21 (expresiones -> expresiones RESTA terminos .)
    IGUALDAD        reduce using rule 21 (expresiones -> expresiones RESTA terminos .)
    RESTA           reduce using rule 21 (expresiones -> expresiones RESTA terminos .)
    RPARENT         reduce using rule 21 (expresiones -> expresiones RESTA terminos .)
    MUTIPLICA       shift and go to state 41
    DIVIDE          shift and go to state 42


state 47

    (12) declaraciones -> VAR ID ENDSENTENCE .

    RCORCHE         reduce using rule 12 (declaraciones -> VAR ID ENDSENTENCE .)


state 48

    (13) declaraciones -> VAR ID ASIGNA . expresiones ENDSENTENCE
    (19) expresiones -> . expresiones SUMA terminos
    (20) expresiones -> . expresiones IGUALDAD terminos
    (21) expresiones -> . expresiones RESTA terminos
    (22) expresiones -> . terminos
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    expresiones                    shift and go to state 53
    terminos                       shift and go to state 29
    factor                         shift and go to state 30

state 49

    (17) ciclos -> PARA LPARENT ID . COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE

    COMA            shift and go to state 54


state 50

    (14) condicionales -> SI LPARENT expresiones . RPARENT LCORCHE instrucciones RCORCHE sinocondicion
    (19) expresiones -> expresiones . SUMA terminos
    (20) expresiones -> expresiones . IGUALDAD terminos
    (21) expresiones -> expresiones . RESTA terminos

    RPARENT         shift and go to state 55
    SUMA            shift and go to state 35
    IGUALDAD        shift and go to state 36
    RESTA           shift and go to state 37


state 51

    (23) terminos -> terminos MUTIPLICA factor .

    MUTIPLICA       reduce using rule 23 (terminos -> terminos MUTIPLICA factor .)
    DIVIDE          reduce using rule 23 (terminos -> terminos MUTIPLICA factor .)
    ENDSENTENCE     reduce using rule 23 (terminos -> terminos MUTIPLICA factor .)
    SUMA            reduce using rule 23 (terminos -> terminos MUTIPLICA factor .)
    IGUALDAD        reduce using rule 23 (terminos -> terminos MUTIPLICA factor .)
    RESTA           reduce using rule 23 (terminos -> terminos MUTIPLICA factor .)
    RPARENT         reduce using rule 23 (terminos -> terminos MUTIPLICA factor .)


state 52

    (24) terminos -> terminos DIVIDE factor .

    MUTIPLICA       reduce using rule 24 (terminos -> terminos DIVIDE factor .)
    DIVIDE          reduce using rule 24 (terminos -> terminos DIVIDE factor .)
    ENDSENTENCE     reduce using rule 24 (terminos -> terminos DIVIDE factor .)
    SUMA            reduce using rule 24 (terminos -> terminos DIVIDE factor .)
    IGUALDAD        reduce using rule 24 (terminos -> terminos DIVIDE factor .)
    RESTA           reduce using rule 24 (terminos -> terminos DIVIDE factor .)
    RPARENT         reduce using rule 24 (terminos -> terminos DIVIDE factor .)


state 53

    (13) declaraciones -> VAR ID ASIGNA expresiones . ENDSENTENCE
    (19) expresiones -> expresiones . SUMA terminos
    (20) expresiones -> expresiones . IGUALDAD terminos
    (21) expresiones -> expresiones . RESTA terminos

    ENDSENTENCE     shift and go to state 56
    SUMA            shift and go to state 35
    IGUALDAD        shift and go to state 36
    RESTA           shift and go to state 37


state 54

    (17) ciclos -> PARA LPARENT ID COMA . ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE

    ID              shift and go to state 57


state 55

    (14) condicionales -> SI LPARENT expresiones RPARENT . LCORCHE instrucciones RCORCHE sinocondicion

    LCORCHE         shift and go to state 58


state 56

    (13) declaraciones -> VAR ID ASIGNA expresiones ENDSENTENCE .

    RCORCHE         reduce using rule 13 (declaraciones -> VAR ID ASIGNA expresiones ENDSENTENCE .)


state 57

    (17) ciclos -> PARA LPARENT ID COMA ID . RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE

    RPARENT         shift and go to state 59


state 58

    (14) condicionales -> SI LPARENT expresiones RPARENT LCORCHE . instrucciones RCORCHE sinocondicion
    (6) instrucciones -> . declaraciones
    (7) instrucciones -> . ciclos
    (8) instrucciones -> . condicionales
    (9) instrucciones -> . expresiones ENDSENTENCE
    (10) instrucciones -> . instrucciones
    (11) instrucciones -> . empty
    (12) declaraciones -> . VAR ID ENDSENTENCE
    (13) declaraciones -> . VAR ID ASIGNA expresiones ENDSENTENCE
    (17) ciclos -> . PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE
    (14) condicionales -> . SI LPARENT expresiones RPARENT LCORCHE instrucciones RCORCHE sinocondicion
    (19) expresiones -> . expresiones SUMA terminos
    (20) expresiones -> . expresiones IGUALDAD terminos
    (21) expresiones -> . expresiones RESTA terminos
    (22) expresiones -> . terminos
    (29) empty -> .
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    VAR             shift and go to state 25
    PARA            shift and go to state 27
    SI              shift and go to state 28
    RCORCHE         reduce using rule 29 (empty -> .)
    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    expresiones                    shift and go to state 23
    instrucciones                  shift and go to state 60
    declaraciones                  shift and go to state 20
    ciclos                         shift and go to state 21
    condicionales                  shift and go to state 22
    empty                          shift and go to state 24
    terminos                       shift and go to state 29
    factor                         shift and go to state 30

state 59

    (17) ciclos -> PARA LPARENT ID COMA ID RPARENT . EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE

    EN              shift and go to state 61


state 60

    (14) condicionales -> SI LPARENT expresiones RPARENT LCORCHE instrucciones . RCORCHE sinocondicion
    (10) instrucciones -> instrucciones .

  ! shift/reduce conflict for RCORCHE resolved as shift
    RCORCHE         shift and go to state 62

  ! RCORCHE         [ reduce using rule 10 (instrucciones -> instrucciones .) ]


state 61

    (17) ciclos -> PARA LPARENT ID COMA ID RPARENT EN . LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE

    LPARENT         shift and go to state 63


state 62

    (14) condicionales -> SI LPARENT expresiones RPARENT LCORCHE instrucciones RCORCHE . sinocondicion
    (15) sinocondicion -> . SINO LCORCHE instrucciones RCORCHE
    (16) sinocondicion -> . empty
    (29) empty -> .

    SINO            shift and go to state 65
    RCORCHE         reduce using rule 29 (empty -> .)

    sinocondicion                  shift and go to state 64
    empty                          shift and go to state 66

state 63

    (17) ciclos -> PARA LPARENT ID COMA ID RPARENT EN LPARENT . condicionfor RPARENT LCORCHE instrucciones RCORCHE
    (18) condicionfor -> . expresiones
    (19) expresiones -> . expresiones SUMA terminos
    (20) expresiones -> . expresiones IGUALDAD terminos
    (21) expresiones -> . expresiones RESTA terminos
    (22) expresiones -> . terminos
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    condicionfor                   shift and go to state 67
    expresiones                    shift and go to state 68
    terminos                       shift and go to state 29
    factor                         shift and go to state 30

state 64

    (14) condicionales -> SI LPARENT expresiones RPARENT LCORCHE instrucciones RCORCHE sinocondicion .

    RCORCHE         reduce using rule 14 (condicionales -> SI LPARENT expresiones RPARENT LCORCHE instrucciones RCORCHE sinocondicion .)


state 65

    (15) sinocondicion -> SINO . LCORCHE instrucciones RCORCHE

    LCORCHE         shift and go to state 69


state 66

    (16) sinocondicion -> empty .

    RCORCHE         reduce using rule 16 (sinocondicion -> empty .)


state 67

    (17) ciclos -> PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor . RPARENT LCORCHE instrucciones RCORCHE

    RPARENT         shift and go to state 70


state 68

    (18) condicionfor -> expresiones .
    (19) expresiones -> expresiones . SUMA terminos
    (20) expresiones -> expresiones . IGUALDAD terminos
    (21) expresiones -> expresiones . RESTA terminos

    RPARENT         reduce using rule 18 (condicionfor -> expresiones .)
    SUMA            shift and go to state 35
    IGUALDAD        shift and go to state 36
    RESTA           shift and go to state 37


state 69

    (15) sinocondicion -> SINO LCORCHE . instrucciones RCORCHE
    (6) instrucciones -> . declaraciones
    (7) instrucciones -> . ciclos
    (8) instrucciones -> . condicionales
    (9) instrucciones -> . expresiones ENDSENTENCE
    (10) instrucciones -> . instrucciones
    (11) instrucciones -> . empty
    (12) declaraciones -> . VAR ID ENDSENTENCE
    (13) declaraciones -> . VAR ID ASIGNA expresiones ENDSENTENCE
    (17) ciclos -> . PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE
    (14) condicionales -> . SI LPARENT expresiones RPARENT LCORCHE instrucciones RCORCHE sinocondicion
    (19) expresiones -> . expresiones SUMA terminos
    (20) expresiones -> . expresiones IGUALDAD terminos
    (21) expresiones -> . expresiones RESTA terminos
    (22) expresiones -> . terminos
    (29) empty -> .
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    VAR             shift and go to state 25
    PARA            shift and go to state 27
    SI              shift and go to state 28
    RCORCHE         reduce using rule 29 (empty -> .)
    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    instrucciones                  shift and go to state 71
    declaraciones                  shift and go to state 20
    ciclos                         shift and go to state 21
    condicionales                  shift and go to state 22
    expresiones                    shift and go to state 23
    empty                          shift and go to state 24
    terminos                       shift and go to state 29
    factor                         shift and go to state 30

state 70

    (17) ciclos -> PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT . LCORCHE instrucciones RCORCHE

    LCORCHE         shift and go to state 72


state 71

    (15) sinocondicion -> SINO LCORCHE instrucciones . RCORCHE
    (10) instrucciones -> instrucciones .

  ! shift/reduce conflict for RCORCHE resolved as shift
    RCORCHE         shift and go to state 73

  ! RCORCHE         [ reduce using rule 10 (instrucciones -> instrucciones .) ]


state 72

    (17) ciclos -> PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE . instrucciones RCORCHE
    (6) instrucciones -> . declaraciones
    (7) instrucciones -> . ciclos
    (8) instrucciones -> . condicionales
    (9) instrucciones -> . expresiones ENDSENTENCE
    (10) instrucciones -> . instrucciones
    (11) instrucciones -> . empty
    (12) declaraciones -> . VAR ID ENDSENTENCE
    (13) declaraciones -> . VAR ID ASIGNA expresiones ENDSENTENCE
    (17) ciclos -> . PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE
    (14) condicionales -> . SI LPARENT expresiones RPARENT LCORCHE instrucciones RCORCHE sinocondicion
    (19) expresiones -> . expresiones SUMA terminos
    (20) expresiones -> . expresiones IGUALDAD terminos
    (21) expresiones -> . expresiones RESTA terminos
    (22) expresiones -> . terminos
    (29) empty -> .
    (23) terminos -> . terminos MUTIPLICA factor
    (24) terminos -> . terminos DIVIDE factor
    (25) terminos -> . factor
    (26) factor -> . NUMERO
    (27) factor -> . ID
    (28) factor -> . LPARENT expresiones RPARENT

    VAR             shift and go to state 25
    PARA            shift and go to state 27
    SI              shift and go to state 28
    RCORCHE         reduce using rule 29 (empty -> .)
    NUMERO          shift and go to state 31
    ID              shift and go to state 26
    LPARENT         shift and go to state 18

    instrucciones                  shift and go to state 74
    declaraciones                  shift and go to state 20
    ciclos                         shift and go to state 21
    condicionales                  shift and go to state 22
    expresiones                    shift and go to state 23
    empty                          shift and go to state 24
    terminos                       shift and go to state 29
    factor                         shift and go to state 30

state 73

    (15) sinocondicion -> SINO LCORCHE instrucciones RCORCHE .

    RCORCHE         reduce using rule 15 (sinocondicion -> SINO LCORCHE instrucciones RCORCHE .)


state 74

    (17) ciclos -> PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones . RCORCHE
    (10) instrucciones -> instrucciones .

  ! shift/reduce conflict for RCORCHE resolved as shift
    RCORCHE         shift and go to state 75

  ! RCORCHE         [ reduce using rule 10 (instrucciones -> instrucciones .) ]


state 75

    (17) ciclos -> PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE .

    RCORCHE         reduce using rule 17 (ciclos -> PARA LPARENT ID COMA ID RPARENT EN LPARENT condicionfor RPARENT LCORCHE instrucciones RCORCHE .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for RCORCHE in state 19 resolved as shift
WARNING: shift/reduce conflict for RCORCHE in state 60 resolved as shift
WARNING: shift/reduce conflict for RCORCHE in state 71 resolved as shift
WARNING: shift/reduce conflict for RCORCHE in state 74 resolved as shift
